#1431 Changed split screen layout css to use flex columns instead of margins & absolute positioning Made split screen layouts more responsive - single column now shown when screen is <480px & no longer relies on mobile flag being set when project first loads Tweaked xot1 theme so panel styling is no longer set directly on #infoHolder

--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/desktopStyles.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/desktopStyles.css
@@ -52,7 +52,7 @@
 }
 
 /* displays as one column on mobiles */
-.splitScreen {
+/*.splitScreen {
 	padding:	0 0 0 50%;
 	position:	relative;
 }
@@ -110,7 +110,7 @@
 
 .splitScreen .right {
 	margin-left: 1em;
-}
+}*/
 
 .autocolumns2{
 	-webkit-columns: 2 250px;
