--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
@@ -1854,3 +1854,34 @@ button.resourceLink {
 .resourceContinueBtn {
 	margin-right: .5em;
 }
+
+/* split screen layout used in lots of page models */
+.splitScreen {
+	display: flex;
+	column-gap: 1em;
+	width: 100%;
+}
+
+.splitScreen.small .left { flex: 0 0 calc(20% - .5em); } /* using calc to exclude 1/2 of column-gap */
+.splitScreen.small .right {	flex: 0 0 calc(80% - .5em); }
+.splitScreen.medium2 .left { flex: 0 0 calc(30% - .5em); }
+.splitScreen.medium2 .right { flex: 0 0 calc(70% - .5em); }
+.splitScreen.medium .left {	flex: 0 0 calc(40% - .5em); }
+.splitScreen.medium .right { flex: 0 0 calc(60% - .5em); }
+.splitScreen.large .left { flex: 0 0 calc(60% - .5em); }
+.splitScreen.large .right { flex: 0 0 calc(40% - .5em); }
+.splitScreen.xlarge .left { flex: 0 0 calc(80% - .5em); }
+.splitScreen.xlarge .right { flex: 0 0 calc(20% - .5em); }
+
+/* add padding between text & panels when stacked vertically */
+#textTopHolder + .splitScreen,
+#textTopHolder + #textHolder,
+.splitScreen + #textBottomHolder,
+.splitScreen #infoHolder #textTopHolder + #panel,
+.splitScreen #infoHolder #panel + #textBottomHolder,
+#textHolder + #infoHolder.full,
+#infoHolder.full #textTopHolder + #panel,
+#infoHolder.full #textBottomHolder,
+#infoHolder.full + #textBottomHolder {
+	margin-top: 1em;
+}
