--- a/themes/Nottingham/xot1/xot1.css
+++ b/themes/Nottingham/xot1/xot1.css
@@ -1800,8 +1800,8 @@ body:not(.sb_right):not(.sb_left) #x_mainHolder {
 }
 
 #infoHolder {
-  border-radius: 0;
-  background: #ebebeb;
+  /*border-radius:$mediumroundedcorners;
+  background: $lightgrey;*/
 }
 
 .panel {
